--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+ 
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title style="background-color:SlateBlue;">KNOW YOUR AKAN NAME</title>
-      <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 
 <body>
@@ -14,25 +17,8 @@
       <div class="row">
       <div class="col-md-4">
         <h1>AKAN NAMES</h1>
-        <p>
-            The Akan people of Ghana frequently name their children after the day of the week they were born and the order in which they were born. These "
-            day names" have further meanings concerning the soul and character of the person. Middle names have considerably more variety and can refer to their
-             birth order, twin status, or an ancestor's middle name.
-
-This naming tradition is shared throughout West Africa and the African diaspora. During the 18th–19th centuries, enslaved people in the Caribbean from the region that is modern-day Ghana were
- referred to as Coromantees. Many of the leaders of enslaved people's rebellions had "day names" including Cuffy, Cuffee or Kofi, Cudjoe or Kojo, Quao or Quaw, 
- and Quamina or Kwame/Kwamina.
-
-Most Ghanaians have at least one name from this system, even if they also have an English or Christian name. Notable figures with day names include Ghana's first president Kwame Nkrumah and former United Nations
- Secretary-General Kofi Annan.
-
-In the official orthography of the Twi language, the Ashanti versions of these names as spoken in Kumasi are as follows. The diacritics on á a̍ à represent
- high, mid, and low tone (tone does not need to be marked on every vowel), while the diacritic on a̩ is used for vowel harmony and can be ignored.
-  (Diacritics are frequently dropped in any case.) Variants of the names are used in other languages, or may represent different transliteration schemes. 
-  The variants mostly consist of different affixes (in Ashanti, kwa- or ko- for men and a- plus -a or -wa for women). For example, among the Fante, the prefixes are kwe-, kwa or ko for men and e-,
-   arespectively. Akan d̩wo or jo(Fante) is pronounced something like English Joe, but there do appear to be two sets of names for those born on Monday.
-        </p>
-            <p>KNOW YOUR AKAN NAME!!!JUST FILL IN THE FORM BELOW 👇 👇 👇 </p>
+        <p>Akan names come from a traditional naming system for people from countries such as Togo, Ivory Coast and Ghana. A child’s name is determined by factors surrounding his or her birth. For example, the day of their birth or the manner in which they were born may determine which name they get irrespective of their gender. These Akan names signify the day one is born. According to Akan tradition, each child is born with a name associated to their soul. The day the child is born is therefore determined by the soul. The well thought and organized naming system of the Akan’s was initiated by the ancestors and has attracted so many people’s attention as they desire to know more about these names. As a matter of fact, it is possible to tell what led to someone’s birth, the day they were born and their rank among the siblings just by their names.</p>
+        <p>KNOW YOUR AKAN NAME!!!JUST FILL IN THE FORM BELOW 👇 👇 👇 </p>
 
         <form class="forms">
                <div class="form-group">
@@ -58,5 +44,13 @@ In the official orthography of the Twi language, the Ashanti versions of these n
              </form><br>
 
              <h1 id="result"><strong>Name</strong></h1>
-            </body>
+
+  <script src="js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
+
