--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+  <style>
+    body {
+      background-image: url('images/background.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+    </style>
     <div class="container">
       <div class="row">
       <div class="col-md-4">
