--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     <div class="container">
       <div class="row">
       <div class="col-md-4">
-        <h1>AKAN NAMES</h1>
+        <h1> <strong><style>
+body {
+  background-image: url('images/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style><strong>KNOW YOUR AKAN NAME!</strong></h1>
         <p>The Akan people of Ghana frequently name their children after the day of the week they were born and the order in which they were born. These "day names" have further meanings concerning the soul and character of the person. Middle names have considerably more variety and can refer to their birth order, twin status, or an ancestor's middle name.</p>
 
           <p>This naming tradition is shared throughout West Africa and the African diaspora. During the 18th–19th centuries, enslaved people in the Caribbean from the region that is modern-day Ghana were referred to as Coromantees. Many of the leaders of enslaved people's rebellions had "day names" including Cuffy, Cuffee or Kofi, Cudjoe or Kojo, Quao or Quaw, and Quamina or Kwame/Kwamina.. A child’s name is determined by factors surrounding his or her birth. For example, the day of their birth or the manner in which they were born may determine which name they get irrespective of their gender. These Akan names signify the day one is born. According to Akan tradition, each child is born with a name associated to their soul.</p>
@@ -54,7 +61,7 @@
                <button type="button" value="Submit" name="Button" onclick="akanFunction()">Submit</button><br>
              </form><br>
 
-             <h1 id="result"><strong>Name</strong></h1>
+             <h1 id="result"><strong>Name:</strong></h1>
 
   <script src="js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
