--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 
-<body>
+<body
+<div class="bottom-left">Bottom Left</div>
+  <div class="top-left">Top Left</div>
+  <div class="top-right">Top Right</div>
+  <div class="bottom-right">Bottom Right</div>
+  <div class="centered">Centered</div>
+>
   <style>
-    body {
+   body{
+
       background-image: url('images/background.jpg');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
     }
+    
     </style>
     <div class="container">
       <div class="row">
@@ -36,7 +44,7 @@ body {
 
           <p>This naming tradition is shared throughout West Africa and the African diaspora. During the 18th–19th centuries, enslaved people in the Caribbean from the region that is modern-day Ghana were referred to as Coromantees. Many of the leaders of enslaved people's rebellions had "day names" including Cuffy, Cuffee or Kofi, Cudjoe or Kojo, Quao or Quaw, and Quamina or Kwame/Kwamina.. A child’s name is determined by factors surrounding his or her birth. For example, the day of their birth or the manner in which they were born may determine which name they get irrespective of their gender. These Akan names signify the day one is born. According to Akan tradition, each child is born with a name associated to their soul.</p>
             <p> The day the child is born is therefore determined by the soul. The well thought and organized naming system of the Akan’s was initiated by the ancestors and has attracted so many people’s attention as they desire to know more about these names. As a matter of fact, it is possible to tell what led to someone’s birth, the day they were born and their rank among the siblings just by their names.</p>
-        <p>KNOW YOUR AKAN NAME!!!JUST FILL IN THE FORM BELOW 👇 👇 👇 </p>
+        <p>TO KNOW YOUR AKAN NAME SIMPLY FILL IN THE FORM BELOW.BE KEEN ON THE DETAILS YOU INPUT TO GET THE RIGHT NAME!!</p>
 
         <form class="forms">
                <div class="form-group">
@@ -62,6 +70,14 @@ body {
              </form><br>
 
              <h1 id="result"><strong>Name:</strong></h1>
+             <div>
+               <p>
+                 <strong>This is interesting,right?
+                 Share your Akan name with your friend and 
+                 let them show you theirs.Share it with some of your friends and let them know their Akan 
+                 names!</strong>
+               </p>
+             </div>
 
   <script src="js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
